--- a/index.html
+++ b/index.html
@@ -26,59 +26,59 @@
                                     <img src="./assets/img/popup.svg" alt="popup" class="subnav__nav-icon">
                                 </label>
                                 <input type="checkbox" id="subnav__checkbox" class="subnav__checkbox">
-                                <div class="subnav__inner inner">
+                                <div class="subnav__inner">
                                     <ul class="subnav__list list">
                                         <li class="subnav__item item">
                                             <a href="#">
-                                                <img src="./assets/img/calendar.svg" alt="calendar" class="subnav__icon icon">
+                                                <img src="./assets/img/calendar.svg" alt="" class="subnav__icon icon">
                                                 <span class="subnav__title title">Calendar</span>
                                             </a>
                                         </li>
                                         <li class="subnav__item item">
                                             <a href="#">
-                                                <img src="./assets/img/letter.svg" alt="letter" class="subnav__icon icon">
+                                                <img src="./assets/img/letter.svg" alt="" class="subnav__icon icon">
                                                 <span class="subnav__title title">Mail</span>
                                             </a>
                                         </li>
                                         <li class="subnav__item item">
                                             <a href="#">
-                                                <img src="./assets/img/stats.svg" alt="stats" class="subnav__icon icon">
+                                                <img src="./assets/img/stats.svg" alt="" class="subnav__icon icon">
                                                 <span class="subnav__title title">Stats</span>
                                             </a>
                                         </li>
                                         <li class="subnav__item item">
                                             <a href="#">
-                                                <img src="./assets/img/pin.svg" alt="pin" class="subnav__icon icon">
+                                                <img src="./assets/img/pin.svg" alt="" class="subnav__icon icon">
                                                 <span class="subnav__title title">Map</span>
                                             </a>
                                         </li>
                                         <li class="subnav__item item">
                                             <a href="#">
-                                                <img src="./assets/img/folder.svg" alt="folder" class="subnav__icon icon">
+                                                <img src="./assets/img/folder.svg" alt="" class="subnav__icon icon">
                                                 <span class="subnav__title title">Files</span>
                                             </a>
                                         </li>
                                         <li class="subnav__item item">
                                             <a href="#">
-                                                <img src="./assets/img/users.svg" alt="users" class="subnav__icon icon">
+                                                <img src="./assets/img/users.svg" alt="" class="subnav__icon icon">
                                                 <span class="subnav__title title">Contacts</span>
                                             </a>
                                         </li>
                                         <li class="subnav__item item">
                                             <a href="#">
-                                                <img src="./assets/img/bookmark.svg" alt="calendar" class="subnav__icon icon">
+                                                <img src="./assets/img/bookmark.svg" alt="" class="subnav__icon icon">
                                                 <span class="subnav__title title">Bookmark</span>
                                             </a>
                                         </li>
                                         <li class="subnav__item item">
                                             <a href="#">
-                                                <img src="./assets/img/camera.svg" alt="camera" class="subnav__icon icon">
+                                                <img src="./assets/img/camera.svg" alt="" class="subnav__icon icon">
                                                 <span class="subnav__title title">Video</span>
                                             </a>
                                         </li>
                                         <li class="subnav__item item">
                                             <a href="#">
-                                                <img src="./assets/img/search.svg" alt="search" class="subnav__icon icon">
+                                                <img src="./assets/img/search.svg" alt="" class="subnav__icon icon">
                                                 <span class="subnav__title title">Search</span>
                                             </a>
                                         </li>
@@ -86,41 +86,41 @@
                                             <div class="subnav__extra">
                                                 <input type="checkbox" id="subnav__extra-checkbox" class="subnav__extra-checkbox">
                                                 <label for="subnav__extra-checkbox" class="subnav__button">More</label>
-                                                <div class="subnav__extra-inner inner">
+                                                <div class="subnav__extra-inner">
                                                     <ul class="subnav__extra-list list">
                                                         <li class="subnav__extra-item item">
                                                             <a href="#">
-                                                                <img src="./assets/img/message.svg" alt="message" class="subnav__extra-icon icon">
+                                                                <img src="./assets/img/message.svg" alt="" class="subnav__extra-icon icon">
                                                                 <span class="subnav__exra-title title">Message</span>
                                                             </a>
                                                         </li>
                                                         <li class="subnav__extra-item item">
                                                             <a href="#">
-                                                                <img src="./assets/img/cloud.svg" alt="cloud" class="subnav__extra-icon icon">
+                                                                <img src="./assets/img/cloud.svg" alt="" class="subnav__extra-icon icon">
                                                                 <span class="subnav__exra-title title">Cloud</span>
                                                             </a>
                                                         </li>
                                                         <li class="subnav__extra-item item">
                                                             <a href="#">
-                                                                <img src="./assets/img/trash.svg" alt="trash" class="subnav__extra-icon icon">
+                                                                <img src="./assets/img/trash.svg" alt="" class="subnav__extra-icon icon">
                                                                 <span class="subnav__exra-title title">Delete</span>
                                                             </a>
                                                         </li>
                                                         <li class="subnav__extra-item item">
                                                             <a href="#">
-                                                                <img src="./assets/img/picture.svg" alt="picture" class="subnav__extra-icon icon">
+                                                                <img src="./assets/img/picture.svg" alt="" class="subnav__extra-icon icon">
                                                                 <span class="subnav__exra-title title">Photo</span>
                                                             </a>
                                                         </li>
                                                         <li class="subnav__extra-item item">
                                                             <a href="#">
-                                                                <img src="./assets/img/info.svg" alt="info" class="subnav__extra-icon icon">
+                                                                <img src="./assets/img/info.svg" alt="" class="subnav__extra-icon icon">
                                                                 <span class="subnav__exra-title title">Info</span>
                                                             </a>
                                                         </li>
                                                         <li class="subnav__extra-item item">
                                                             <a href="#">
-                                                                <img src="./assets/img/message.svg" alt="message" class="subnav__extra-icon icon">
+                                                                <img src="./assets/img/message.svg" alt="" class="subnav__extra-icon icon">
                                                                 <span class="subnav__exra-title title">Message</span>
                                                             </a>
                                                         </li>
@@ -134,12 +134,12 @@
                         </li>
                         <li class="nav__item nav__item_hidden">
                             <a href="#">
-                                <img src="./assets/img/bell.svg" alt="bell" class="nav__icon">
+                                <img src="./assets/img/bell.svg" alt="" class="nav__icon">
                             </a>
                         </li>
                         <li class="nav__item">
                             <a href="#">
-                                <img src="./assets/img/bird.svg" alt="bird" class="nav__icon">
+                                <img src="./assets/img/bird.svg" alt="" class="nav__icon">
                             </a>
                         </li>
                     </ul>
