Edit header logo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header">
         <div class="container">
             <div class="header__inner">
-                <div class="header__logo">Logo</div>
+                <a href="index.html" class="header__logo">Logo</a>
                 <nav class="nav">
                     <ul class="nav__list">
                         <li class="nav__item nav__item_hidden">
@@ -23,7 +23,7 @@
                         <li class="nav__item">
                             <div class="subnav">
                                 <label for="subnav__checkbox">
-                                    <img src="./assets/img/popup.svg" alt="popup" class="subnav__nav-icon">
+                                    <img src="./assets/img/popup.svg" alt="" class="subnav__nav-icon">
                                 </label>
                                 <input type="checkbox" id="subnav__checkbox" class="subnav__checkbox">
                                 <div class="subnav__inner">
